# Python_OnlineStore_Dzhabagiev

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
users/: admin.py  forms.py  models.py  service.py  urls.py  views.py
users/management/commands/: export_product_residue.py  load_goods.py
users/migrations/: 0001_created_user_model.py
users/templates/: home.html  login.html  logout.html
users/templates/categories/: category_detail.html  category_list.html  create_category.html
users/templates/customers/: customer_detail.html  customer_list.html
users/templates/inventories/: create_inventory.html  inventory_detail.html  inventory_list.html
users/templates/orders/: create_order.html  order_detail.html  order_list.html
users/templates/products/: create_product.html  product_detail.html  product_list.html
users/templates/registration/: register.html
users/templates/shopping_cart/: add_to_cart.html  shopping_cart_detail.html  shopping_cart_list.html
webstore/: settings.py  urls.py
webstore/tests/: test_models.py
